[package]
name = "concrete-fft"
version = "0.1.0"
edition = "2021"
authors = ["sarah el kazdadi <sarah.elkazdadi@zama.ai>"]
description = "Concrete-FFT is a pure Rust high performance fast Fourier transform library."
readme = "README.md"
repository = "https://github.com/zama-ai/concrete-fft"
license = "BSD-3-Clause-Clear"
homepage = "https://zama.ai/"
keywords = ["fft"]

[dependencies]
num-complex = "0.4"
dyn-stack = { version = "0.8", default-features = false }
pulp = { version = "0.10", optional = true }
bytemuck = { version = "1.13", optional = true }
aligned-vec = { version = "0.5", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[features]
default = ["std"]
std = []
fft128 = ["pulp", "bytemuck"]
nightly = ["pulp?/nightly", "bytemuck?/nightly_stdsimd"]
serde = ["dep:serde", "num-complex/serde"]

[dev-dependencies]
criterion = "0.3"
rustfft = "6.0"
fftw-sys = { version = "0.6", default-features = false, features = ["system"] }
rand = "0.8"
bincode = "1.3"
more-asserts = "0.3.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
rug = "1.19.0"

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]
