[package]
name = "concrete-fft"
version = "0.2.0"
edition = "2021"
authors = ["sarah el kazdadi <sarah.elkazdadi@zama.ai>"]
description = "Concrete-FFT is a pure Rust high performance fast Fourier transform library."
readme = "README.md"
repository = "https://github.com/zama-ai/concrete-fft"
license = "BSD-3-Clause-Clear"
homepage = "https://zama.ai/"
keywords = ["fft"]

[dependencies]
aligned-vec = { version = "0.5", default-features = false }
bytemuck = "1"
dyn-stack = { version = "0.9", default-features = false }
num-complex = { version = "0.4", features = ["bytemuck"] }
pulp = { version = "0.11", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[features]
default = ["std"]
nightly = ["pulp/nightly"]
std = ["pulp/std"]
serde = ["dep:serde", "num-complex/serde"]

[dev-dependencies]
criterion = "0.4"
rustfft = "6.0"
fftw-sys = { version = "0.6", default-features = false, features = ["system"] }
rand = "0.8"
bincode = "1.3"

[[bench]]
name = "fft"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]

[profile.dev]
lto = "off"
